为父元素增加默认z-index

--- a/src/css.scss
+++ b/src/css.scss
@@ -5,6 +5,7 @@ $color: #FF8800;
    display: none;
    width: 400px;
    border: solid 1px #DDD;
+   z-index: 1;
    background: #FFF;
    a {
        text-decoration: none;
