新增menu指定样式

--- a/src/css.scss
+++ b/src/css.scss
@@ -3,7 +3,7 @@ $color: #FF8800;
 .zl_ct {
    position: absolute;
    display: none;
-   width: 480px;
+   width: 570px;
    border: solid 1px #DDD;
    z-index: 1;
    background: #FFF;
@@ -19,9 +19,10 @@ $color: #FF8800;
     a{
         float: left;
         display: block;
-        padding-left: 10px;
-        padding-right: 10px;
-        color: #333;
+        padding-left: 15px;
+        padding-right: 15px;
+        color: #555;
+        font-weight: bold;
         span {
             display: none;
         }
@@ -62,22 +63,25 @@ $color: #FF8800;
     }
 }
 .zl_ct_mn {
-    border-top: solid 1px #DDD;
+    border-top: solid 2px #DDD;
     padding: 0 10px 10px 10px;
     margin-top: -1px;
     line-height: 20px;
-    font-size: 12px;
+    font-size: 14px;
     &>div {
         overflow: hidden;
         p {
             float: left;
             &:first-child {
-               margin: 10px 10px 0 10px;
-               font-size: 14px;
+               margin-top: 10px;
+               width: 80px;
+               font-size: 16px;
+               font-weight: bold;
                color: $color;
+               text-align: center;
             }
             &:last-child {
-                width: 420px;
+                width: 450px;
             }
         }
     }
@@ -86,7 +90,11 @@ $color: #FF8800;
         margin-top: 10px;
         padding-left: 5px;
         padding-right: 5px;
-        color: #333;
+        width: 90px;
+        overflow: hidden;
+        white-space:nowrap;
+        text-overflow:ellipsis;
+        color: #666;
         &:hover {
             color: $color;
         }
